Bunch of cleanup, no functionality changes